Fix spacing between stats overview and store management cards (https://github.com/woocommerce/woocommerce-admin/pull/4681)
* Fix spacing between stats overview and store management cards

* Revert "Fix spacing between stats overview and store management cards"

This reverts commit 993374313657f7ecf7803cc738b82bf63ecdf490.

* Home screen div margins

--- a/plugins/woocommerce-admin/client/homescreen/style.scss
+++ b/plugins/woocommerce-admin/client/homescreen/style.scss
@@ -36,6 +36,10 @@
 	top: 130px;
 	margin: 0 auto;
 	align-self: flex-start;
+
+	> div {
+		margin-bottom: $gap-large;
+	}
 }
 .temp-content {
 	width: 100%;
@@ -71,4 +75,3 @@
 		padding: 0 $gap-smaller;
 	}
 }
-
